22/04/05 타겟넘버 추가

--- a/practice.ipynb
+++ b/practice.ipynb
@@ -269,6 +269,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YR\n",
+    "# p - m = p - (s-p)\n",
+    "from itertools import combinations\n",
+    "def solution(numbers, target):\n",
+    "    \n",
+    "    answer = 0\n",
+    "    S = sum(numbers)\n",
+    "    \n",
+    "    for l in range(len(numbers)+1):\n",
+    "        for plus_set in combinations(numbers, l):\n",
+    "            if (2*sum(plus_set)-S)==target:\n",
+    "                answer +=1\n",
+    "                \n",
+    "    return answer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [
@@ -369,7 +391,6 @@
     "    n = len(numbers)\n",
     "    answer = 0\n",
     "    def recursive(idx, num):\n",
-    "        \n",
     "        if idx == n:\n",
     "            if num == target:\n",
     "                nonlocal answer\n",
