--- a/practice.ipynb
+++ b/practice.ipynb
@@ -451,6 +451,242 @@
     "k = 7\n",
     "solution(scoville, k)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "짝지어 제거하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "string = 'baabaa'\n",
+    "\n",
+    "def solution(s):\n",
+    "    check = [s[0]]\n",
+    "\n",
+    "    for ss in s[1:]:\n",
+    "        if not check:\n",
+    "            check.append(ss)\n",
+    "        elif check[-1] == ss:\n",
+    "            check.pop()\n",
+    "        else:\n",
+    "            check.append(ss)\n",
+    "        \n",
+    "    \n",
+    "    return 0 if check else 1\n",
+    "\n",
+    "solution(string)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "행렬테두리회전"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 10, 25]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(rows, columns, queries):\n",
+    "    results = []\n",
+    "    matrix = [[r*columns + (c+1) for c in range(columns)] for r in range(rows)]\n",
+    "    for x1, y1, x2, y2 in queries:\n",
+    "        min_v = float('inf')\n",
+    "        coordinates = []\n",
+    "        for x in range(x1-1, x2):\n",
+    "            if x == x1-1 or x == x2-1:\n",
+    "                for y in range(y1-1, y2):\n",
+    "                    cur = matrix[x][y]\n",
+    "                    min_v = min(min_v, cur)\n",
+    "                    coordinates.append([cur, (x,y)])\n",
+    "            else:\n",
+    "                left, right =matrix[x][y1-1], matrix[x][y2-1]\n",
+    "                min_v = min(min_v, left, right)\n",
+    "                coordinates.append([left,(x,y1-1)])\n",
+    "                coordinates.append([right,(x,y2-1)])\n",
+    "\n",
+    "        results.append(min_v)\n",
+    "\n",
+    "        for n,c in coordinates:\n",
+    "            ## 상하좌우\n",
+    "            # 우\n",
+    "            if c[0] == x1-1 and c[1] != y2-1:\n",
+    "                matrix[c[0]][c[1]+1] = n\n",
+    "            # 좌\n",
+    "            elif c[0] == x2-1 and c[1] != y1-1:\n",
+    "                matrix[c[0]][c[1]-1] = n\n",
+    "            # 상\n",
+    "            elif c[1] == y1-1 and c[0] != x1-1:\n",
+    "                matrix[c[0]-1][c[1]] = n\n",
+    "            # 하\n",
+    "            else:\n",
+    "                matrix[c[0]+1][c[1]] = n\n",
+    "    return results\n",
+    "r,c = 6,6\n",
+    "q = [[2,2,5,4],[3,3,6,6],[5,1,6,3]]\n",
+    "solution(r,c,q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(rows, columns, queries):\n",
+    "    answer = []\n",
+    "\n",
+    "    board = [[i+(j)*columns for i in range(1,columns+1)] for j in range(rows)]\n",
+    "    # print(board)\n",
+    "\n",
+    "    for a,b,c,d in queries:\n",
+    "        stack = []\n",
+    "        r1, c1, r2, c2 = a-1, b-1, c-1, d-1\n",
+    "\n",
+    "\n",
+    "        for i in range(c1, c2+1):\n",
+    "\n",
+    "            stack.append(board[r1][i])\n",
+    "            if len(stack) == 1:\n",
+    "                continue\n",
+    "            else:\n",
+    "                board[r1][i] = stack[-2]\n",
+    "\n",
+    "\n",
+    "        for j in range(r1+1, r2+1):\n",
+    "            stack.append(board[j][i])\n",
+    "            board[j][i] = stack[-2]\n",
+    "\n",
+    "        for k in range(c2-1, c1-1, -1):\n",
+    "            stack.append(board[j][k])\n",
+    "            board[j][k] = stack[-2]\n",
+    "\n",
+    "        for l in range(r2-1, r1-1, -1):\n",
+    "            stack.append(board[l][k])\n",
+    "            board[l][k] = stack[-2]\n",
+    "\n",
+    "        answer.append(min(stack))\n",
+    "\n",
+    "\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "메뉴 리뉴얼"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'XY': 2, 'WX': 2, 'XZ': 1, 'YZ': 1, 'WY': 1, 'AW': 1, 'AX': 1})\n",
+      "Counter({'XYZ': 1, 'WXY': 1, 'AWX': 1})\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['WX', 'XY']"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "from itertools import combinations\n",
+    "def solution(orders, course):\n",
+    "    results = []\n",
+    "    for i in course:\n",
+    "        counter = Counter()\n",
+    "        for order in orders:\n",
+    "            order=\"\".join(sorted(order))\n",
+    "            for c_set in combinations(order,i):\n",
+    "                counter.update([\"\".join(c_set)])\n",
+    "        if not counter:\n",
+    "            continue\n",
+    "        print(counter)\n",
+    "        max_value = max(counter.values())\n",
+    "        if max_value < 2:\n",
+    "            continue\n",
+    "        for k, v in counter.items():\n",
+    "            if v == max_value:\n",
+    "                results.append(\"\".join(k))\n",
+    "\n",
+    "    results.sort()\n",
+    "    return results\n",
+    "orders = [\"XYZ\", \"XWY\", \"WXA\"]\n",
+    "course = [2,3,4]\n",
+    "\n",
+    "solution(orders, course)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import collections\n",
+    "import itertools\n",
+    "\n",
+    "def solution(orders, course):\n",
+    "    result = []\n",
+    "\n",
+    "    for course_size in course:\n",
+    "        order_combinations = []\n",
+    "        for order in orders:\n",
+    "            order_combinations += itertools.combinations(sorted(order), course_size)\n",
+    "        most_ordered = collections.Counter(order_combinations).most_common()\n",
+    "        # out of index ??????????????\n",
+    "        result += [ k for k, v in most_ordered if v > 1 and v == most_ordered[0][1] ]\n",
+    "\n",
+    "    return [ ''.join(v) for v in sorted(result) ]"
+   ]
   }
  ],
  "metadata": {
