--- a/practice2.ipynb
+++ b/practice2.ipynb
@@ -147,6 +147,65 @@
    "source": [
     "거리두기 확인하기"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 0, 1, 1, 1]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "def bfs(place):\n",
+    "    \n",
+    "    direction = {'up':(-1,0), 'down':(1,0), 'left':(0,-1), 'right':(0,1)}\n",
+    "\n",
+    "    start = [ [i,j] for i in range(5) for j in range(5) if place[i][j] == \"P\"]\n",
+    "    for s in start:\n",
+    "        visited = [[0]*5 for i in range(5)]\n",
+    "        visited[s[0]][s[1]] = 1\n",
+    "        distance = [[0]*5 for i in range(5)]\n",
+    "        Q = deque([s])\n",
+    "        \n",
+    "        while Q:\n",
+    "            r,c = Q.popleft()\n",
+    "            for v in direction.values():\n",
+    "                n_r = r + v[0]\n",
+    "                n_c = c + v[1]\n",
+    "                \n",
+    "                if 0<=n_r<5 and 0<=n_c<5 and visited[n_r][n_c]==0:\n",
+    "                    if place[n_r][n_c] == \"O\":\n",
+    "                        Q.append([n_r, n_c])\n",
+    "                        visited[n_r][n_c] = 1\n",
+    "                        distance[n_r][n_c] = distance[r][c] + 1\n",
+    "\n",
+    "                    if place[n_r][n_c] == \"P\" and distance[r][c] <= 1:    \n",
+    "                        return 0\n",
+    "\n",
+    "    return 1\n",
+    "\n",
+    "def solution(places):\n",
+    "    result = []\n",
+    "    for place in places:\n",
+    "        result.append(bfs(place))\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "places = [[\"POOOP\", \"OXXOX\", \"OPXPX\", \"OOXOX\", \"POXXP\"], [\"POOPX\", \"OXPXP\", \"PXXXO\", \"OXXXO\", \"OOOPP\"], [\"PXOPX\", \"OXOXP\", \"OXPOX\", \"OXXOP\", \"PXPOX\"], [\"OOOXX\", \"XOOOX\", \"OOOXX\", \"OXOOX\", \"OOOOO\"], [\"PXPXP\", \"XPXPX\", \"PXPXP\", \"XPXPX\", \"PXPXP\"]]\n",
+    "solution(places)\n",
+    "# place"
+   ]
   }
  ],
  "metadata": {
