--- a/practice2.ipynb
+++ b/practice2.ipynb
@@ -206,6 +206,347 @@
     "solution(places)\n",
     "# place"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "수식 최대화"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "299"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "from itertools import permutations\n",
+    "\n",
+    "def solution(expression):\n",
+    "    oper = set(re.findall(\"[-+*]\", expression))\n",
+    "    res = []\n",
+    "    for op in permutations(oper, len(oper)):\n",
+    "        exp = re.split(\"([-+*])\", expression)\n",
+    "        for o in op:\n",
+    "            while o in exp:\n",
+    "                idx = exp.index(o)\n",
+    "                exp = exp[:idx-1] + [str(eval(''.join(exp[idx-1:idx+2])))] + exp[idx+2:]\n",
+    "        res.append(abs(int(exp[0])))\n",
+    "\n",
+    "    return max(res)\n",
+    "    \n",
+    "expression = \"100-200*300-500+20\"\n",
+    "expression = \"50*6-3+2\"\n",
+    "solution(expression)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "299"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(expression):\n",
+    "    operations = [('+', '-', '*'),('+', '*', '-'),('-', '+', '*'),('-', '*', '+'),('*', '+', '-'),('*', '-', '+')]\n",
+    "    answer = []\n",
+    "    for op in operations:\n",
+    "        a = op[0]\n",
+    "        b = op[1]\n",
+    "        temp_list = []\n",
+    "        for e in expression.split(a):\n",
+    "            \n",
+    "            temp = [f\"({i})\" for i in e.split(b)]\n",
+    "            temp_list.append(f'({b.join(temp)})')\n",
+    "        answer.append(abs(eval(a.join(temp_list))))\n",
+    "    return max(answer)\n",
+    "expression = \"50*6-3+2\"\n",
+    "solution(expression)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "튜플"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 1, 3, 4]"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "def solution(s):\n",
+    "    res = []\n",
+    "    s = re.split(\"({[0-9,]+})\", s)[1:-1]\n",
+    "    s = sorted(s, key= lambda x:len(x))\n",
+    "    print\n",
+    "\n",
+    "    for ss in s:\n",
+    "        if ss == ',':\n",
+    "            continue\n",
+    "    \n",
+    "        for cand in re.split(\",\",ss[1:-1]):\n",
+    "            if int(cand) not in res:\n",
+    "                res.append(int(cand))\n",
+    "    \n",
+    "    return res\n",
+    "s, r=\"{{1,2,3},{2,1},{1,2,4,3},{2}}\",[2, 1, 3, 4]\n",
+    "solution(s)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'2': 4, '1': 3, '3': 2, '4': 1})\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[2, 1, 3, 4]"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "from collections import Counter\n",
+    "def solution(s):\n",
+    "\n",
+    "    s = Counter(re.findall('\\d+', s))\n",
+    "    return list(map(int, [k for k, v in sorted(s.items(), key=lambda x: x[1], reverse=True)]))\n",
+    "s, r=\"{{2},{2,1},{2,1,3},{2,1,3,4}}\", [2, 1, 3, 4]\n",
+    "solution(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2: 0, 1: 0, 3: 0, 4: 0}"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(s):\n",
+    "    s = eval(s.replace(\"{\", \"[\").replace(\"}\", \"]\"))\n",
+    "    answer = {num:0 for k in sorted(s, key=lambda x: len(x)) for num in k}\n",
+    "    return answer\n",
+    "\n",
+    "s, r=\"{{1,2,3},{2,1},{1,2,4,3},{2}}\",[2, 1, 3, 4]\n",
+    "solution(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "빛 경 싸"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def solution(grid):\n",
+    "    direction = [(1,0), (-1,0), (0,1), (0,-1)]\n",
+    "    states = {\"R\":{0:3, 1:2, 2:0, 3:1}, \"L\":{0:2, 1:3, 2:1, 3:0}}\n",
+    "    r, c = len(grid), len(grid[0])\n",
+    "    check = [[[False]*4 for _ in range(c)] for _ in range(r)]\n",
+    "    answer = []\n",
+    "    for i in range(r):\n",
+    "        for j in range(c):\n",
+    "            for d in range(4):\n",
+    "                if not check[i][j][d]:\n",
+    "                    row, col, direct = i, j, d\n",
+    "                    cnt = 0\n",
+    "                    while True:\n",
+    "                        check[row][col][direct] = True\n",
+    "                        cnt += 1\n",
+    "                        if grid[row][col] == \"L\":\n",
+    "                            direct = states[\"L\"][direct]\n",
+    "                        \n",
+    "                        elif grid[row][col] == \"R\":\n",
+    "                            direct = states[\"R\"][direct]\n",
+    "                            \n",
+    "                        row, col = (row + direction[direct][0]) % r, (col + direction[direct][1]) % c\n",
+    "\n",
+    "                        if check[row][col][direct]:\n",
+    "                            if (row, col, direct) == (i,j,d):\n",
+    "                                answer.append(cnt)\n",
+    "                            break\n",
+    "    answer.sort()\n",
+    "    return answer\n",
+    "\n",
+    "grid_1 = [\"S\"]\n",
+    "print(solution(grid_1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dx = [1,0,-1,0]\n",
+    "dy = [0,-1,0,1]\n",
+    "\n",
+    "def solution(grid):\n",
+    "    global visited,n,m\n",
+    "    n = len(grid)\n",
+    "    m = len(grid[0])\n",
+    "    answer = []\n",
+    "    visited = [[[False]*4 for _ in range(m)] for _ in range(n)]\n",
+    "    for sx in range(n):\n",
+    "        for sy in range(m):\n",
+    "            for d in range(4):\n",
+    "                if not visited[sx][sy][d]:\n",
+    "                    rst = simul(sx,sy,d,grid)\n",
+    "                    if rst != 0:\n",
+    "                        answer.append(rst)\n",
+    "    answer.sort()\n",
+    "    return answer\n",
+    "\n",
+    "def simul(sx,sy,sd,grid):\n",
+    "    global visited\n",
+    "    x,y,d=sx,sy,sd\n",
+    "    cnt = 0\n",
+    "    visited[sx][sy][sd] = True\n",
+    "    while True:\n",
+    "        x = (x + dx[d]) % n\n",
+    "        y = (y + dy[d]) % m\n",
+    "        cnt += 1\n",
+    "\n",
+    "        if grid[x][y] == 'R':\n",
+    "            d = (d+1)%4\n",
+    "        elif grid[x][y] == 'L':\n",
+    "            d = (d-1)%4\n",
+    "        if visited[x][y][d]:\n",
+    "            if (x,y,d) == (sx,sy,sd):\n",
+    "                return cnt\n",
+    "            else:\n",
+    "                return 0\n",
+    "        visited[x][y][d] = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 1, 1, 2, 2]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "def solution(grid):\n",
+    "    direction = [(1,0), (0,-1), (0,1), (0,-1)]\n",
+    "    states = {'R':{0:3, 1:2, 2:0, 3:1}, 'L':{0:2, 1:3, 2:1, 3:0}}\n",
+    "    r, c = len(grid), len(grid[0])\n",
+    "    check = [[[False]*4 for _ in range(c)] for _ in range(r)]\n",
+    "    answer = []\n",
+    "    for i in range(r):\n",
+    "        for j in range(c):\n",
+    "            for d in range(4):\n",
+    "                if not check[i][j][d]:\n",
+    "                    row, col, direct = i, j, d\n",
+    "                    cnt = 0\n",
+    "                    check[i][j][d] = True\n",
+    "                    while True:\n",
+    "                        cnt += 1\n",
+    "                        if grid[row][col] == \"L\":\n",
+    "                            direct = states[\"L\"][direct]\n",
+    "                            row, col = (row + direction[direct][0]) % r, (col + direction[direct][1]) % c\n",
+    "                        \n",
+    "                        elif grid[row][col] == \"R\":\n",
+    "                            direct = states[\"R\"][direct]\n",
+    "                            row, col = (row + direction[direct][0]) % r, (col + direction[direct][1]) % c\n",
+    "                        \n",
+    "                        if check[row][col][direct]:\n",
+    "                            if (row, col, direct) == (i,j,d):\n",
+    "                                answer.append(cnt)\n",
+    "                                break\n",
+    "\n",
+    "                            else:\n",
+    "                                break\n",
+    "                        check[row][col][direct] = True\n",
+    "    \n",
+    "    return answer\n",
+    "\n",
+    "grid_1 = [\"SL\",\"LR\"]\n",
+    "solution(grid_1)"
+   ]
   }
  ],
  "metadata": {
