--- a/practice2.ipynb
+++ b/practice2.ipynb
@@ -394,19 +394,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "빛 경 싸"
+    "빛의 경로 사이클"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 2\n"
+      "[16]\n"
      ]
     }
    ],
@@ -441,15 +441,23 @@
     "    answer.sort()\n",
     "    return answer\n",
     "\n",
-    "grid_1 = [\"S\"]\n",
+    "grid_1 = [\"SL\",\"LR\"]\n",
     "print(solution(grid_1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[16]\n"
+     ]
+    }
+   ],
    "source": [
     "dx = [1,0,-1,0]\n",
     "dy = [0,-1,0,1]\n",
@@ -489,63 +497,10 @@
     "                return cnt\n",
     "            else:\n",
     "                return 0\n",
-    "        visited[x][y][d] = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 1, 1, 1, 2, 2]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "def solution(grid):\n",
-    "    direction = [(1,0), (0,-1), (0,1), (0,-1)]\n",
-    "    states = {'R':{0:3, 1:2, 2:0, 3:1}, 'L':{0:2, 1:3, 2:1, 3:0}}\n",
-    "    r, c = len(grid), len(grid[0])\n",
-    "    check = [[[False]*4 for _ in range(c)] for _ in range(r)]\n",
-    "    answer = []\n",
-    "    for i in range(r):\n",
-    "        for j in range(c):\n",
-    "            for d in range(4):\n",
-    "                if not check[i][j][d]:\n",
-    "                    row, col, direct = i, j, d\n",
-    "                    cnt = 0\n",
-    "                    check[i][j][d] = True\n",
-    "                    while True:\n",
-    "                        cnt += 1\n",
-    "                        if grid[row][col] == \"L\":\n",
-    "                            direct = states[\"L\"][direct]\n",
-    "                            row, col = (row + direction[direct][0]) % r, (col + direction[direct][1]) % c\n",
-    "                        \n",
-    "                        elif grid[row][col] == \"R\":\n",
-    "                            direct = states[\"R\"][direct]\n",
-    "                            row, col = (row + direction[direct][0]) % r, (col + direction[direct][1]) % c\n",
-    "                        \n",
-    "                        if check[row][col][direct]:\n",
-    "                            if (row, col, direct) == (i,j,d):\n",
-    "                                answer.append(cnt)\n",
-    "                                break\n",
-    "\n",
-    "                            else:\n",
-    "                                break\n",
-    "                        check[row][col][direct] = True\n",
-    "    \n",
-    "    return answer\n",
+    "        visited[x][y][d] = True\n",
     "\n",
     "grid_1 = [\"SL\",\"LR\"]\n",
-    "solution(grid_1)"
+    "print(solution(grid_1))"
    ]
   }
  ],
