--- a/practice2.ipynb
+++ b/practice2.ipynb
@@ -502,6 +502,303 @@
     "grid_1 = [\"SL\",\"LR\"]\n",
     "print(solution(grid_1))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[16]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_1 = [\"SL\",\"LR\"]\n",
+    "\n",
+    "direction = [(1,0), (0,-1), (-1,0), (0,1)]\n",
+    "r, c = len(grid_1), len(grid_1[0])\n",
+    "\n",
+    "visited = [[[False]*4 for _ in range(c)] for _ in range(r)]\n",
+    "\n",
+    "answer = []\n",
+    "for i in range(r):\n",
+    "    for j in range(c):\n",
+    "        for d in range(4):\n",
+    "            if not visited[i][j][d]:\n",
+    "                cnt = 0\n",
+    "                row, column, direct = i, j, d\n",
+    "                visited[row][column][direct] = True\n",
+    "                while True:\n",
+    "                    cnt += 1\n",
+    "\n",
+    "                    if grid_1[row][column] == \"R\":\n",
+    "                        direct = (direct+1)%4\n",
+    "                    elif grid_1[row][column] == \"L\":\n",
+    "                        direct = (direct-1)%4\n",
+    "\n",
+    "                    row, column = (row + direction[direct][0])%r, (column + direction[direct][1])%c\n",
+    "\n",
+    "                    if visited[row][column][direct]:\n",
+    "                        if (row, column, direct) == (i,j,d):\n",
+    "                            answer.append(cnt)\n",
+    "                            break\n",
+    "                        else: break\n",
+    "                            \n",
+    "                    visited[row][column][direct] == True\n",
+    "\n",
+    "\n",
+    "answer\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "전화번호 목록"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input=[\"119\", \"97674223\", \"1195524421\"] # false\n",
+    "input=[\"123\",\"456\",\"789\"] # true\n",
+    "input=[\"12\",\"123\",\"1235\",\"567\",\"88\"] # false\n",
+    "\n",
+    "def solution(input):\n",
+    "    input.sort()\n",
+    "    for pre, cur in zip(input, input[1:]):\n",
+    "        if cur.startswith(pre):\n",
+    "            return False\n",
+    "\n",
+    "    return True\n",
+    "input=[\"123\",\"456\",\"789\"]\n",
+    "solution(input)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "프린터"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priorities=[2, 1, 3, 2]\n",
+    "location=2, # result 1\n",
+    "priorities=[1, 1, 9, 1, 1, 1]\n",
+    "location=0 # 5\n",
+    "from collections import deque\n",
+    "def solution(priorities, location):\n",
+    "    priorities = deque([(i, idx) for idx,i in enumerate(priorities)])\n",
+    "    answer = 0\n",
+    "    while True:\n",
+    "        i, idx = priorities.popleft()\n",
+    "        \n",
+    "        if priorities and i < max(priorities)[0]:\n",
+    "            priorities.append((i,idx))\n",
+    "        else:\n",
+    "            answer += 1\n",
+    "            if idx == location:\n",
+    "                break\n",
+    "    return answer\n",
+    "\n",
+    "priorities=[2, 1, 3, 2]\n",
+    "location=2 # result 1\n",
+    "solution(priorities, location)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "가장 큰 수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0'"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(numbers):\n",
+    "    numbers = list(map(lambda x:str(x), numbers))\n",
+    "    length = max([ len(num) for num in numbers])+1\n",
+    "    numbers_modify = [(num * divmod(length, len(num))[0] + num[:divmod(length, len(num))[1]], num) if len(num)<length else (num, num) for num in numbers]\n",
+    "    numbers_modify = sorted(numbers_modify, key=lambda x:x[0], reverse=True)\n",
+    "    result = ''.join([ num[1] for num in numbers_modify])\n",
+    "    return \"0\" if result[0] == '0' else result\n",
+    "\n",
+    "numbers=[6, 10, 2] # \"6210\"\n",
+    "numbers=[3, 30, 34, 5, 9] # \"9534330\"\n",
+    "solution([0,0,0,0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4322123'"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(numbers):\n",
+    "    \n",
+    "    numbers=list(map(str,numbers))\n",
+    "    a=sorted(numbers,key=lambda x:(x*4)[:4],reverse=True)\n",
+    "\n",
+    "    return  '0' if a[0]=='0' else ''.join(a)\n",
+    "\n",
+    "numbers=[123, 432, 2] # \"9534330\"\n",
+    "solution(numbers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "소수 찾기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import permutations\n",
+    "\n",
+    "def solution(numbers):\n",
+    "    case_set = set()\n",
+    "    for i in range(1, len(numbers)+1):\n",
+    "        for num in permutations(numbers, i):\n",
+    "            num = int(''.join(num))\n",
+    "            if num > 1:\n",
+    "                case_set.add(num)\n",
+    "    cnt = 0\n",
+    "    for case in case_set:\n",
+    "        flag = True\n",
+    "        for i in range(2, int(case**0.5)+1):\n",
+    "            if not case % i:\n",
+    "                flag = False\n",
+    "                break\n",
+    "\n",
+    "        if flag:\n",
+    "            cnt += 1\n",
+    "            \n",
+    "    return cnt\n",
+    "\n",
+    "numbers=\"011\"\n",
+    "solution(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import permutations\n",
+    "\n",
+    "def solution(numbers):\n",
+    "\n",
+    "    num_range = int('9' *len(numbers))\n",
+    "    prime_number = [False, False] + [True] * num_range\n",
+    "\n",
+    "    for i in range(2, num_range+1):\n",
+    "        if prime_number[i]:\n",
+    "            prime_number[i*2::i] = [False] * len(prime_number[i*2::i])\n",
+    "\n",
+    "    case_set = set()\n",
+    "    for i in range(1, len(numbers)+1):\n",
+    "        for case in permutations(numbers, i):\n",
+    "            num = int(''.join(case))\n",
+    "            if prime_number[num]:\n",
+    "                case_set.add(num)\n",
+    "    return len(case_set)\n",
+    "numbers='17'\n",
+    "solution(numbers)\n",
+    "\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
