--- a/program_dp.ipynb
+++ b/program_dp.ipynb
@@ -59,6 +59,69 @@
     "\n",
     "solution(N, number)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#     7\n",
+    "#    3 8\n",
+    "#   8 1 0\n",
+    "#  2 7 4 4\n",
+    "# 4 5 2 6 5\n",
+    "\n",
+    "# 삼각형의 정보가 담긴 배열 triangle이 매개변수로 주어질 때, 거쳐간 숫자의 최댓값을 return 하도록 solution 함수를 완성하세요.\n",
+    "# triangle\tresult\n",
+    "# [[7], [3, 8], [8, 1, 0], [2, 7, 4, 4], [4, 5, 2, 6, 5]]\t30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(triangle):\n",
+    "    for i in range(1, len(triangle)):\n",
+    "        for j in range(len(triangle[i])):\n",
+    "            if j == 0:\n",
+    "                triangle[i][j] = triangle[i-1][j]\n",
+    "\n",
+    "            elif j == len(triangle[i])-1:\n",
+    "                triangle[i][j] = triangle[i-1][j-1]\n",
+    "\n",
+    "            else:\n",
+    "                triangle[i][j] = max(triangle[i-1][j-1], triangle[i-1][j])\n",
+    "\n",
+    "    return max(triangle[-1])\n",
+    "\n",
+    "\n",
+    "def exception_solution(triangle):\n",
+    "    triangle = [[0]+ line +[0] for line in triangle]\n",
+    "\n",
+    "    for i in range(1, len(triangle)):\n",
+    "        for j in range(1, i+2):\n",
+    "            triangle[i][j] += max(triangle[i-1][j], triangle[i-1][j-1])\n",
+    "\n",
+    "    return max(triangle[-1])\n",
+    "\n",
+    "\n",
+    "triangle = [[7], [3, 8], [8, 1, 0], [2, 7, 4, 4], [4, 5, 2, 6, 5]]\n",
+    "solution(triangle)"
+   ]
   }
  ],
  "metadata": {
