--- a/program_dp.ipynb
+++ b/program_dp.ipynb
@@ -122,6 +122,58 @@
     "triangle = [[7], [3, 8], [8, 1, 0], [2, 7, 4, 4], [4, 5, 2, 6, 5]]\n",
     "solution(triangle)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# zigzag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 0, 3, 3, 3, 5, 0, 0] [1, 2, 2, 2, 4, 4, 0, 6, 6]\n",
+      "[1, 2, 2, 3, 4, 4, 5, 6, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a = [3, -1, 2, 5, 7, 4, 5, 9, 8]\n",
+    "a = [2, 5, 7, 3, 4, 6, 1, 8, 9]\n",
+    "# a = [4, 3, 2, 1, 10, 6, 9, 7, 8] \n",
+    "# a = [1, 2, 3, 4, 5] # 0\n",
+    "\n",
+    "low = [0]*len(a)\n",
+    "high = [0]*len(a)\n",
+    "low[0], high[0] = 1, 1\n",
+    "\n",
+    "for k in range(1, len(a)):\n",
+    "    for j in range(k):\n",
+    "        if a[j] > a[k]:\n",
+    "            low[k] = max(low[k], high[j]+1)\n",
+    "\n",
+    "        elif a[j] < a[k]:\n",
+    "            high[k] = max(high[k], low[j]+1)\n",
+    "\n",
+    "# 시간복잡도\n",
+    "# max(max(low), max(high))\n",
+    "print(low, high)\n",
+    "\n",
+    "answer = []\n",
+    "for k in range(len(a)):\n",
+    "    answer.append(max(low[k], high[k]))\n",
+    "\n",
+    "print(answer)\n"
+   ]
   }
  ],
  "metadata": {
