--- a/program_graph.ipynb
+++ b/program_graph.ipynb
@@ -40,6 +40,7 @@
     "\n",
     "from collections import defaultdict, deque\n",
     "\n",
+    "\n",
     "def solution(n, vertex):\n",
     "    graph = defaultdict(list)\n",
     "    for u, v in vertex:\n",
@@ -47,14 +48,15 @@
     "        graph[v].append(u)    \n",
     "\n",
     "    check_list = [0 for _ in range(n)]\n",
-    "    \n",
-    "    queue = deque([1])\n",
+    "\n",
+    "    queue = deque([1]) # 1 \n",
     "    while queue:\n",
-    "        num = queue.popleft()\n",
-    "        for nxt in graph[num]:            \n",
-    "            if not check_list[nxt-1]:\n",
-    "                check_list[nxt-1] = check_list[num-1] + 1\n",
+    "        num = queue.popleft() # 2\n",
+    "        for nxt in graph[num]:  # 3         \n",
+    "            if not check_list[nxt-1]: \n",
+    "                check_list[nxt-1] = check_list[num-1] + 1 # list[3] = list[2] + 1\n",
     "                queue.append(nxt)\n",
+    "\n",
     "    \n",
     "    return check_list[1:].count(max(check_list[1:]))\n",
     "\n",
@@ -146,9 +148,58 @@
     "\n",
     "    return answer\n",
     "\n",
+    "\n",
+    "\"\"\"\n",
+    "1,2,3\n",
+    "4\n",
+    "5\n",
+    "\n",
+    "vic[4] = 1,2,3 def[1] \n",
+    "def[4] = 5 \n",
+    "vic[5] = 4\n",
+    "\n",
+    "\"\"\"\n",
     "n = 5\n",
     "results = [[4, 3], [4, 2], [3, 2], [1, 2], [2, 5]]\n",
     "solution(n, results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "방의 개수  \n",
+    "  \n",
+    "- 갔던 방향으로 다시 되돌아오는 경우\n",
+    "- 엑스자 그리기로 방이 생기는 경우"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(arrows):\n",
+    "    visited = set()\n",
+    "    visited.add((0,0))\n",
+    "    visited_dir = set()\n",
+    "    move = {0:(-1,0), 1:(-1,1), 2:(0,1), 3:(1,1), 4:(1,0), 5:(1,-1), 6:(0,-1),7:(-1,-1)}\n",
+    "\n",
+    "    dot = (0,0)\n",
+    "    answer = 0\n",
+    "    for arrow in arrows:\n",
+    "        for _ in range(2):\n",
+    "            nxt_dot = (dot[0] + move[arrow][0], dot[1] + move[arrow][1])\n",
+    "            \n",
+    "            if nxt_dot in visited and (dot, nxt_dot) not in visited_dir:\n",
+    "                answer += 1\n",
+    "            visited.add(nxt_dot)\n",
+    "            visited_dir.add((dot, nxt_dot))\n",
+    "            visited_dir.add((nxt_dot, dot))\n",
+    "            dot = nxt_dot\n",
+    "\n",
+    "    return answer"
    ]
   }
  ],
