--- a/program_stack-queue.ipynb
+++ b/program_stack-queue.ipynb
@@ -144,6 +144,60 @@
     "\n",
     "solution(priorities, location)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "다리를 지나는 트럭  \n",
+    "\n",
+    "bridge_length는 1 이상 10,000 이하입니다.  \n",
+    "weight는 1 이상 10,000 이하입니다.  \n",
+    "truck_weights의 길이는 1 이상 10,000 이하입니다.  \n",
+    "모든 트럭의 무게는 1 이상 weight 이하입니다.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "110"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(bridge_length, weight, truck_weights):\n",
+    "    truck_weights = truck_weights\n",
+    "    bridge = [0 for _ in range(bridge_length)]\n",
+    "    time = 0\n",
+    "    while bridge:\n",
+    "        time += 1\n",
+    "        bridge.pop(0)\n",
+    "        if truck_weights:    \n",
+    "\n",
+    "            if sum(bridge) + truck_weights[0] <= weight:\n",
+    "\n",
+    "                bridge.append(truck_weights.pop(0))\n",
+    "\n",
+    "            else:\n",
+    "\n",
+    "                bridge.append(0)\n",
+    "\n",
+    "    return time\n",
+    "bridge_length = 100\n",
+    "weight = 100\n",
+    "truck_weight = [10, 10, 10, 10, 10, 10, 10, 10, 10, 10]\n",
+    "\n",
+    "solution(bridge_length, weight, truck_weight)"
+   ]
   }
  ],
  "metadata": {
