--- a/program_stack-queue.ipynb
+++ b/program_stack-queue.ipynb
@@ -198,6 +198,223 @@
     "\n",
     "solution(bridge_length, weight, truck_weight)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "주식가격  \n",
+    "주식가격이 담긴 배열 prices가 매개변수로 주어질 때, 가격이 떨어지지 않은 기간은 몇 턴인지를 return\n",
+    "  \n",
+    "prices의 각 가격은 1 이상 10,000 이하인 자연수  \n",
+    "prices의 길이는 2 이상 100,000 이하  \n",
+    "  \n",
+    "1초 시점의 ₩1은 끝까지 가격이 떨어지지 않았습니다.  \n",
+    "2초 시점의 ₩2은 끝까지 가격이 떨어지지 않았습니다.  \n",
+    "3초 시점의 ₩3은 1초뒤에 가격이 떨어집니다. 따라서 1초간 가격이 떨어지지 않은 것으로 봅니다.  \n",
+    "4초 시점의 ₩2은 1초간 가격이 떨어지지 않았습니다.  \n",
+    "5초 시점의 ₩3은 0초간 가격이 떨어지지 않았습니다.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 3, 1, 1, 0]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# prices\treturn\n",
+    "# [1, 2, 3, 2, 3]\t[4, 3, 1, 1, 0]\n",
+    "\n",
+    "# 두번째 for loop에서 리스트를 불러오는게 훨씬 시간이 오래 걸림\n",
+    "# i+1 ~ length까지 range를 사용하는게 빠르다.\n",
+    "# 스택,큐라는 주제와 벗어나는 문제 풀이법이라 두가지 풀이법 생각하기\n",
+    "\n",
+    "def solution(prices):\n",
+    "    length = len(prices)\n",
+    "    answer = [0] * length\n",
+    "\n",
+    "    for i in range(length-1):\n",
+    "        pivot = prices[i]\n",
+    "        for nxt in prices[i+1:]:\n",
+    "            answer[i] += 1\n",
+    "            if nxt < pivot:\n",
+    "                break\n",
+    "\n",
+    "    return answer\n",
+    "\n",
+    "def solution2(prices):\n",
+    "    length = len(prices)\n",
+    "    answer = [0] * length\n",
+    "\n",
+    "    for i in range(length-1):\n",
+    "        pivot = prices[i]\n",
+    "        for j in range(i+1, length):\n",
+    "            answer[i] += 1\n",
+    "            if prices[j] < pivot:\n",
+    "                break\n",
+    "    return answer\n",
+    "\n",
+    "\n",
+    "from collections import deque\n",
+    "\n",
+    "def solution3(prices):\n",
+    "    prices = deque(prices)\n",
+    "    answer = []\n",
+    "    while prices:\n",
+    "        pivot = prices.popleft()\n",
+    "        time = 0\n",
+    "        for price in prices:\n",
+    "            time += 1\n",
+    "            if pivot > price:\n",
+    "                break\n",
+    "\n",
+    "        answer.append(time)\n",
+    "            \n",
+    "    return answer\n",
+    "\n",
+    "prices = [1,2,3,2,3]\n",
+    "solution3(prices)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "같은 숫자는 싫어  \n",
+    "\n",
+    "arr의 각 원소는 숫자 0부터 9까지로 이루어져 있다.  \n",
+    "arr에서 연속적으로 나타나는 숫자는 하나만 남기고 전부 제거하려고 한다.  \n",
+    "단, 제거된 후 남은 수들을 반환할 때는 배열 arr의 원소들의 순서를 유지  \n",
+    "  \n",
+    "arr = [1, 1, 3, 3, 0, 1, 1] 이면 [1, 3, 0, 1] 을 return  \n",
+    "arr = [4, 4, 4, 3, 3] 이면 [4, 3]  \n",
+    "  \n",
+    "배열 arr의 크기 : 1,000,000 이하의 자연수  \n",
+    "배열 arr의 원소의 크기 : 0보다 크거나 같고 9보다 작거나 같은 정수  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 0, 1]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(arr):\n",
+    "\n",
+    "    stack = [arr.pop(0)]\n",
+    "    while arr:\n",
+    "        curNumber = arr.pop(0)\n",
+    "        if stack[-1] != curNumber:\n",
+    "            stack.append(curNumber)\n",
+    "    \n",
+    "    return stack\n",
+    "\n",
+    "\n",
+    "def solution2(arr):\n",
+    "    \n",
+    "    answer=[arr[0]]\n",
+    "    for i in arr[1:]:\n",
+    "                \n",
+    "        if answer[-1]!=i:\n",
+    "            answer.append(i)\n",
+    "        \n",
+    "    return answer\n",
+    "\n",
+    "# arr\tanswer\n",
+    "# [1,1,3,3,0,1,1]\t[1,3,0,1]\n",
+    "# [4,4,4,3,3]\t[4,3]\n",
+    "\n",
+    "arr = [1,1,3,3,0,1,1]\n",
+    "solution(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "올바른 괄호  \n",
+    "\n",
+    "괄호가 바르게 짝지어졌다는 것은 '(' 문자로 열렸으면 반드시 짝지어서 ')' 문자로 닫혀야 한다는 뜻  \n",
+    "\n",
+    "\"()()\" 또는 \"(())()\" 는 올바른 괄호  \n",
+    "\")()(\" 또는 \"(()(\" 는 올바르지 않은 괄호  \n",
+    "'(' 또는 ')' 로만 이루어진 문자열 s가 주어졌을 때, 문자열 s가 올바른 괄호이면 true를 return 하고, 올바르지 않은 괄호이면 false를 return  \n",
+    "  \n",
+    "제한사항  \n",
+    "문자열 s의 길이 : 100,000 이하의 자연수  \n",
+    "문자열 s는 '(' 또는 ')' 로만 이루어짐  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "def solution(s):\n",
+    "    stringList = deque(s)\n",
+    "    stack = [stringList.popleft()]\n",
+    "    while stringList:\n",
+    "        curStr = stringList.popleft()\n",
+    "\n",
+    "        if curStr == '(':\n",
+    "            stack.append(curStr)\n",
+    "\n",
+    "        elif not stack:\n",
+    "            return False\n",
+    "\n",
+    "        else:\n",
+    "            stack.pop()\n",
+    "\n",
+    "    return not stack\n",
+    "\n",
+    "# 입출력 예\n",
+    "# s\tanswer\n",
+    "# \"()()\"\ttrue\n",
+    "# \"(())()\"\ttrue\n",
+    "# \")()(\"\tfalse\n",
+    "# \"(()(\"\tfalse\n",
+    "s = \"()()\"\n",
+    "s = \"(())()\"\n",
+    "s = \")()(\"\n",
+    "s = \"(()(\"\n",
+    "s = \")))))))))\"\n",
+    "solution(s)"
+   ]
   }
  ],
  "metadata": {
