--- a/program_exhaustive.ipynb
+++ b/program_exhaustive.ipynb
@@ -152,6 +152,62 @@
     "# \"011\"\t2\n",
     "solution2(\"17\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "카펫  \n",
+    "  \n",
+    "카펫을 사러 갔다가 아래 그림과 같이 중앙에는 노란색으로 칠해져 있고 테두리 1줄은 갈색으로 칠해져 있는 격자 모양 카펫을 봤습니다.\n",
+    "  \n",
+    "B B B B  \n",
+    "B Y Y B  \n",
+    "B B B B  \n",
+    "  \n",
+    "집으로 돌아와서 아까 본 카펫의 노란색과 갈색으로 색칠된 격자의 개수는 기억했지만, 전체 카펫의 크기는 기억하지 못했습니다.  \n",
+    "  \n",
+    "Leo가 본 카펫에서 갈색 격자의 수 brown, 노란색 격자의 수 yellow가 매개변수로 주어질 때 카펫의 가로, 세로 크기를 순서대로 배열에 담아 return  \n",
+    "  \n",
+    "제한사항  \n",
+    "갈색 격자의 수 brown은 8 이상 5,000 이하인 자연수입니다.  \n",
+    "노란색 격자의 수 yellow는 1 이상 2,000,000 이하인 자연수입니다.  \n",
+    "카펫의 가로 길이는 세로 길이와 같거나, 세로 길이보다 깁니다.  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 3]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(brown, yellow):\n",
+    "    total = brown + yellow\n",
+    "    candidates = [[total//i, i] for i in range(3, int(total**0.5)+1) if total % i == 0]\n",
+    "\n",
+    "    for candidate in candidates:\n",
+    "        if ((candidate[0]-2) * (candidate[1]-2)) == yellow:\n",
+    "            return candidate\n",
+    "\n",
+    "# 입출력 예\n",
+    "# brown\tyellow\treturn\n",
+    "# 10\t2\t[4, 3]\n",
+    "# 8\t1\t[3, 3]\n",
+    "# 24\t24\t[8, 6]\n",
+    "\n",
+    "solution(10, 2)"
+   ]
   }
  ],
  "metadata": {
