--- a/program_exhaustive.ipynb
+++ b/program_exhaustive.ipynb
@@ -208,6 +208,155 @@
     "\n",
     "solution(10, 2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "피로도  \n",
+    "  \n",
+    "게임에는 피로도 시스템(0 이상의 정수로 표현합니다)이 있으며, 일정 피로도를 사용해서 던전을 탐험할 수 있습니다.  \n",
+    "이때, 각 던전마다 탐험을 시작하기 위해 필요한 \"최소 필요 피로도\"와 던전 탐험을 마쳤을 때 소모되는 \"소모 피로도\"가 있습니다.  \n",
+    "\"최소 필요 피로도\"는 해당 던전을 탐험하기 위해 가지고 있어야 하는 최소한의 피로도를 나타내며, \"소모 피로도\"는 던전을 탐험한 후 소모되는 피로도를 나타냅니다.  \n",
+    "예를 들어 \"최소 필요 피로도\"가 80, \"소모 피로도\"가 20인 던전을 탐험하기 위해서는 유저의 현재 남은 피로도는 80 이상 이어야 하며, 던전을 탐험한 후에는 피로도 20이 소모됩니다.  \n",
+    "  \n",
+    "이 게임에는 하루에 한 번씩 탐험할 수 있는 던전이 여러개 있는데, 한 유저가 오늘 이 던전들을 최대한 많이 탐험하려 합니다. 유저의 현재 피로도 k와 각 던전별 \"최소 필요 피로도\", \"소모 피로도\"가 담긴 2차원 배열 dungeons 가 매개변수로 주어질 때, 유저가 탐험할수 있는 최대 던전 수를 return  \n",
+    "  \n",
+    "제한사항  \n",
+    "k는 1 이상 5,000 이하인 자연수입니다.  \n",
+    "dungeons의 세로(행) 길이(즉, 던전의 개수)는 1 이상 8 이하입니다.  \n",
+    "dungeons의 가로(열) 길이는 2 입니다.  \n",
+    "dungeons의 각 행은 각 던전의 [\"최소 필요 피로도\", \"소모 피로도\"] 입니다.  \n",
+    "\"최소 필요 피로도\"는 항상 \"소모 피로도\"보다 크거나 같습니다.  \n",
+    "\"최소 필요 피로도\"와 \"소모 피로도\"는 1 이상 1,000 이하인 자연수입니다.  \n",
+    "서로 다른 던전의 [\"최소 필요 피로도\", \"소모 피로도\"]가 서로 같을 수 있습니다.  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import permutations\n",
+    "\n",
+    "def solution(k, dungeons):\n",
+    "    max_num = 0\n",
+    "    for dungeon_order in permutations(dungeons, len(dungeons)):\n",
+    "        tmp_k = k\n",
+    "        dungeon_count = 0\n",
+    "        for dungeon in dungeon_order:\n",
+    "            if dungeon[0] <= tmp_k and (tmp_k-dungeon[1]) >= 0:\n",
+    "                tmp_k -= dungeon[1]\n",
+    "                dungeon_count += 1\n",
+    "        max_num = max(max_num, dungeon_count)\n",
+    "                \n",
+    "    return max_num\n",
+    "\n",
+    "# 입출력 예\n",
+    "# k\tdungeons\tresult\n",
+    "# 80\t[[80,20],[50,40],[30,10]]\t3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "전력망을 둘로 나누기  \n",
+    "\n",
+    "n개의 송전탑이 전선을 통해 하나의 트리 형태로 연결되어 있다.  \n",
+    "당신은 이 전선들 중 하나를 끊어서 현재의 전력망 네트워크를 2개로 분할하려고 한다.  \n",
+    "이때, 두 전력망이 갖게 되는 송전탑의 개수를 최대한 비슷하게 맞추고자 합니다.  \n",
+    "  \n",
+    "송전탑의 개수 n, 그리고 전선 정보 wires가 매개변수로 주어짐.  \n",
+    "전선들 중 하나를 끊어서 송전탑 개수가 가능한 비슷하도록 두 전력망으로 나누었을 때, 두 전력망이 가지고 있는 송전탑 개수의 차이(절대값)를 return  \n",
+    "  \n",
+    "제한사항  \n",
+    "n은 2 이상 100 이하인 자연수입니다.  \n",
+    "wires는 길이가 n-1인 정수형 2차원 배열입니다.  \n",
+    "wires의 각 원소는 [v1, v2] 2개의 자연수로 이루어져 있으며, 이는 전력망의 v1번 송전탑과 v2번 송전탑이 전선으로 연결되어 있다는 것을 의미합니다.  \n",
+    "1 ≤ v1 < v2 ≤ n 입니다.  \n",
+    "전력망 네트워크가 하나의 트리 형태가 아닌 경우는 입력으로 주어지지 않습니다.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict, deque\n",
+    "\n",
+    "def solution(n, wires):\n",
+    "    graph = defaultdict(list)\n",
+    "    for wire in wires:\n",
+    "        graph[wire[0]].append(wire[1])\n",
+    "        graph[wire[1]].append(wire[0])\n",
+    "    \n",
+    "    answer = n\n",
+    "    for wire in wires:\n",
+    "        check = [0, 0]\n",
+    "        \n",
+    "        for idx, start in enumerate(wire):\n",
+    "            visited = [0]*(n+1)\n",
+    "            queue = deque([start])\n",
+    "            visited[start] = 1\n",
+    "            cnt = 1\n",
+    "            while queue:\n",
+    "                num = queue.popleft()\n",
+    "\n",
+    "                for v in graph[num]:\n",
+    "                    if not visited[v] and v != wire[idx-1]:\n",
+    "                        cnt += 1\n",
+    "                        visited[v] = 1\n",
+    "                        queue.append(v)\n",
+    "\n",
+    "            check[idx] = cnt\n",
+    "        \n",
+    "        answer = min(answer, abs(check[0]-check[1]))\n",
+    "\n",
+    "    return answer\n",
+    "\n",
+    "# 입출력 예\n",
+    "# n\twires\tresult\n",
+    "# 9\t[[1,3],[2,3],[3,4],[4,5],[4,6],[4,7],[7,8],[7,9]]\t3\n",
+    "# 4\t[[1,2],[2,3],[3,4]]\t0\n",
+    "# 7\t[[1,2],[2,7],[3,7],[3,4],[4,5],[6,7]]\t1\n",
+    "\n",
+    "n = 9\n",
+    "wires = [[1,3],[2,3],[3,4],[4,5],[4,6],[4,7],[7,8],[7,9]]\n",
+    "\n",
+    "# n = 4\n",
+    "# wires = [[1,2], [2,3], [3,4]]\n",
+    "\n",
+    "\n",
+    "# # n=7\n",
+    "# # wires=[[1,2],[2,7],[3,7],[3,4],[4,5],[6,7]]\n",
+    "\n",
+    "solution(n, wires)"
+   ]
   }
  ],
  "metadata": {
