--- a/program_exhaustive.ipynb
+++ b/program_exhaustive.ipynb
@@ -357,6 +357,117 @@
     "\n",
     "solution(n, wires)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "최소직사각형  \n",
+    "  \n",
+    "명함 지갑을 만드는 회사에서 지갑의 크기를 정하려고 합니다.  \n",
+    "다양한 모양과 크기의 명함들을 모두 수납할 수 있으면서, 작아서 들고 다니기 편한 지갑을 만들어야 합니다.  \n",
+    "이러한 요건을 만족하는 지갑을 만들기 위해 디자인팀은 모든 명함의 가로 길이와 세로 길이를 조사했습니다.  \n",
+    "  \n",
+    "아래 표는 4가지 명함의 가로 길이와 세로 길이를 나타냅니다.  \n",
+    "  \n",
+    "명함 번호\t가로 길이\t세로 길이  \n",
+    "1\t60\t50  \n",
+    "2\t30\t70  \n",
+    "3\t60\t30  \n",
+    "4\t80\t40  \n",
+    "가장 긴 가로 길이와 세로 길이가 각각 80, 70이기 때문에 80(가로) x 70(세로) 크기의 지갑을 만들면 모든 명함들을 수납할 수 있습니다.  \n",
+    "하지만 2번 명함을 가로로 눕혀 수납한다면 80(가로) x 50(세로) 크기의 지갑으로 모든 명함들을 수납할 수 있습니다.  \n",
+    "이때의 지갑 크기는 4000(=80 x 50)입니다.  \n",
+    "  \n",
+    "모든 명함의 가로 길이와 세로 길이를 나타내는 2차원 배열 sizes가 매개변수로 주어집니다. 모든 명함을 수납할 수 있는 가장 작은 지갑을 만들 때, 지갑의 크기를 return  \n",
+    "  \n",
+    "제한사항  \n",
+    "sizes의 길이는 1 이상 10,000 이하입니다.  \n",
+    "sizes의 원소는 [w, h] 형식입니다.  \n",
+    "w는 명함의 가로 길이를 나타냅니다.  \n",
+    "h는 명함의 세로 길이를 나타냅니다.  \n",
+    "w와 h는 1 이상 1,000 이하인 자연수입니다.  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(sizes):\n",
+    "    \n",
+    "    a, b = 0, 0\n",
+    "    for size in sizes:\n",
+    "        a = max(a, max(size))\n",
+    "        b = max(b, min(size))\n",
+    "    \n",
+    "    return a * b\n",
+    "    \n",
+    "\n",
+    "# 입출력 예\n",
+    "# sizes\tresult\n",
+    "# [[60, 50], [30, 70], [60, 30], [80, 40]]\t4000\n",
+    "# [[10, 7], [12, 3], [8, 15], [14, 7], [5, 15]]\t120\n",
+    "# [[14, 4], [19, 6], [6, 16], [18, 7], [7, 11]]\t\n",
+    "\n",
+    "# sizes = [[14, 4], [19, 6], [6, 16], [18, 7], [7, 11]]\n",
+    "# sizes = [[60, 50], [30, 70], [60, 30], [80, 40]]\n",
+    "sizes = [[10, 7], [12, 3], [8, 15], [14, 7], [5, 15]]\n",
+    "solution(sizes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "모음 사전  \n",
+    "  \n",
+    "사전에 알파벳 모음 'A', 'E', 'I', 'O', 'U'만을 사용하여 만들 수 있는, 길이 5 이하의 모든 단어가 수록  \n",
+    "사전에서 첫 번째 단어는 \"A\"이고, 그다음은 \"AA\"이며, 마지막 단어는 \"UUUUU\"입니다.  \n",
+    "  \n",
+    "단어 하나 word가 매개변수로 주어질 때, 이 단어가 사전에서 몇 번째 단어인지 return  \n",
+    "  \n",
+    "제한사항  \n",
+    "word의 길이는 1 이상 5 이하  \n",
+    "word는 알파벳 대문자 'A', 'E', 'I', 'O', 'U'로만 이루어짐  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(word):\n",
+    "    arr = {\"A\":0, \"E\":1, \"I\":2, \"O\":3, \"U\":4}\n",
+    "    N = [781, 156, 31, 6, 1]\n",
+    "    answer = 0\n",
+    "    for idx, w in enumerate(word):\n",
+    "        answer += arr[w] * N[idx] +1\n",
+    "    \n",
+    "    return answer\n",
+    "\n",
+    "\n",
+    "solution('EIO')\n",
+    "# 입출력 예\n",
+    "# word\tresult\n",
+    "# \"AAAAE\"\t6\n",
+    "# \"AAAE\"\t10\n",
+    "# \"I\"\t1563\n",
+    "# \"EIO\"\t1189"
+   ]
   }
  ],
  "metadata": {
